# wp-agent

./: .gitignore  Cargo.toml  README.md
_gal/: adm.gxl  ver.gxl  work.gxl
crates/warp-insight-contracts/: Cargo.toml
crates/warp-insight-control/: Cargo.toml
crates/warp-insight-exec/: Cargo.toml
crates/warp-insight-exec/src/: lib.rs  main.rs  result_writer.rs  runtime.rs  workdir.rs
crates/warp-insight-gateway/: Cargo.toml
crates/warp-insight-shared/: Cargo.toml
crates/warp-insight-upgrader/: Cargo.toml
crates/warp-insight-validate/: Cargo.toml
crates/warp-insight-validate/src/: action_plan.rs  action_result.rs  config.rs  gateway.rs  lib.rs  state.rs
crates/warp-insight-validate/tests/: fixtures.rs
crates/warp-insightd/: Cargo.toml
crates/warp-insightd/src/: bootstrap.rs  capability_report.rs  config_runtime.rs  config_runtime_support.rs  config_runtime_tests.rs  daemon.rs  daemon_metrics.rs  daemon_recovery.rs  daemon_runtime_state.rs  daemon_telemetry.rs  daemon_telemetry_support.rs  execution_support.rs  exporter.rs  lib.rs  local_exec.rs  local_exec_support.rs  main.rs  planner_bridge.rs  process_control.rs  process_control_support.rs  process_control_tests.rs  recovery.rs  reporting_pipeline.rs  reporting_pipeline_support.rs  reporting_pipeline_tests.rs  runtime_entry.rs  runtime_entry_tests.rs  scheduler.rs  scheduler_queue_head.rs  scheduler_reporting_support.rs  self_observability.rs
crates/warp-insightd/src/discovery/: cache.rs  container.rs  host.rs  k8s.rs  mod.rs  process.rs  runtime.rs
crates/warp-insightd/src/state_store/: agent_runtime.rs  execution_queue.rs  history.rs  log_checkpoint_state.rs  log_checkpoints.rs  mod.rs  planner_candidates.rs  reporting.rs  running.rs
crates/warp-insightd/src/telemetry/: buffer.rs  mod.rs  spool.rs  warp_parse.rs
crates/warp-insightd/src/telemetry/logs/: file_input.rs  file_input_delivery_support.rs  file_input_multiline_support.rs  file_input_state.rs  file_reader.rs  file_watcher.rs  mod.rs  parser.rs
crates/warp-insightd/src/telemetry/logs/file_input_tests/: basic.rs  mod.rs  rotation.rs  spool_replay.rs
crates/warp-insightd/src/telemetry/metrics/: mod.rs  runtime.rs  samples.rs  target_view.rs
crates/warp-insightd/tests/local_exec/: common.rs  daemon_file_input.rs  exec_runtime.rs  scheduler_reporting.rs
crates/warp-insightd/tests/local_exec/recovery_daemon/: daemon_loop.rs  process_identity.rs  recovery_flow.rs
crates/warp-insightd/tests/local_exec/scheduler_reporting/: drain_failures.rs  drain_reconcile.rs  submit_queue.rs
crates/wp-agent-contracts/: Cargo.toml
crates/wp-agent-control/: Cargo.toml
crates/wp-agent-exec/: Cargo.toml
crates/wp-agent-exec/src/: lib.rs  main.rs  result_writer.rs  runtime.rs  workdir.rs
crates/wp-agent-gateway/: Cargo.toml
crates/wp-agent-shared/: Cargo.toml
crates/wp-agent-upgrader/: Cargo.toml
crates/wp-agent-validate/: Cargo.toml
crates/wp-agentd/: Cargo.toml
crates/wp-agentd/src/: bootstrap.rs  capability_report.rs  config_runtime.rs  config_runtime_support.rs  config_runtime_tests.rs  daemon.rs  daemon_recovery.rs  daemon_runtime_state.rs  daemon_telemetry.rs  daemon_telemetry_support.rs  execution_support.rs  lib.rs  local_exec.rs  local_exec_support.rs  main.rs  process_control.rs  process_control_tests.rs  quarantine.rs  recovery.rs  reporting_pipeline.rs  reporting_pipeline_support.rs  reporting_pipeline_tests.rs  runtime_entry.rs  runtime_entry_tests.rs  scheduler.rs  scheduler_queue_head.rs  scheduler_reporting_support.rs  self_observability.rs
crates/wp-agentd/src/state_store/: agent_runtime.rs  execution_queue.rs  history.rs  log_checkpoint_state.rs  log_checkpoints.rs  mod.rs  reporting.rs  running.rs
crates/wp-agentd/src/telemetry/: buffer.rs  spool.rs  warp_parse.rs
crates/wp-agentd/src/telemetry/logs/: file_input.rs  file_input_checkpoint_support.rs  file_input_delivery_support.rs  file_input_multiline_support.rs  file_input_state.rs  file_reader.rs  file_watcher.rs  multiline.rs  parser.rs
crates/wp-agentd/src/telemetry/logs/file_input_tests/: checkpoint_state.rs  mod.rs  multiline.rs  spool_replay.rs
crates/wp-agentd/tests/: local_exec.rs
crates/wp-agentd/tests/local_exec/: common.rs  daemon_file_input.rs  exec_runtime.rs  recovery_daemon.rs
crates/wp-agentd/tests/local_exec/recovery_daemon/: daemon_loop.rs  process_identity.rs  recovery_flow.rs
crates/wp-agentd/tests/local_exec/scheduler_reporting/: drain_failures.rs  drain_reconcile.rs  submit_queue.rs
doc/design/: README.md  ack-action-plan-schema.md  action-dsl.md  action-schema.md  (+30 more)
(+129 files in other folders)
