[workspace]
members = [
  "crates/wp-agent-contracts",
  "crates/wp-agent-validate",
  "crates/wp-agent-shared",
  "crates/wp-agentd",
  "crates/wp-agent-exec",
  "crates/wp-agent-upgrader",
  "crates/wp-agent-gateway",
  "crates/wp-agent-control",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
wp-agent-contracts = { path = "crates/wp-agent-contracts" }
wp-agent-validate = { path = "crates/wp-agent-validate" }
wp-agent-shared = { path = "crates/wp-agent-shared" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

