[workspace]
members = [
  "crates/warp-insight-contracts",
  "crates/warp-insight-validate",
  "crates/warp-insight-shared",
  "crates/warp-insightd",
  "crates/warp-insight-exec",
  "crates/warp-insight-upgrader",
  "crates/warp-insight-gateway",
  "crates/warp-insight-control",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0" #@gxl:set(version)
rust-version = "1.85"

[workspace.dependencies]
warp-insight-contracts = { path = "crates/warp-insight-contracts" }
warp-insight-validate = { path = "crates/warp-insight-validate" }
warp-insight-shared = { path = "crates/warp-insight-shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"
tokio = { version = "1.48", features = ["full"] }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
