[package]
name = "wp-agent-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
wp-agent-contracts.workspace = true
wp-agent-shared.workspace = true
wp-agent-validate.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "wp-agent-exec"
path = "src/main.rs"
