[package]
name = "wp-agentd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
time.workspace = true
toml.workspace = true
tokio.workspace = true
wp-agent-contracts.workspace = true
wp-agent-shared.workspace = true
wp-agent-validate.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "wp-agentd"
path = "src/main.rs"
